# connection-txl

./: CMakeLists.txt  add_class.cpp  add_class.h  colors.h  deleter_class.cpp  deleter_class.h  initiate.cpp  initiate.h  main.cpp  modify_class.cpp  modify_class.h  number.cpp  number.h  number_array.cpp  number_array.h  searcher.cpp  searcher.h
